# rust-web-programming

./: Cargo.toml  README.md  package-lock.json  package.json
chapter-01-foundations/: Cargo.toml  README.md
chapter-01-foundations/src/: main.rs
chapter-02-http-routing/: Cargo.toml  README.md
chapter-02-http-routing/src/: main.rs
chapter-03-axum-api/: Cargo.toml  README.md
chapter-03-axum-api/src/: main.rs
chapter-04-validation-errors/: Cargo.toml  README.md
chapter-04-validation-errors/src/: domain.rs  main.rs
chapter-05-middleware-security/: Cargo.toml  README.md
chapter-05-middleware-security/src/: main.rs
chapter-06-sqlx-postgres/: Cargo.toml  README.md  docker-compose.yml
chapter-06-sqlx-postgres/migrations/: 0001_users.sql  0002_tasks.sql
chapter-06-sqlx-postgres/src/: main.rs
chapter-07-jwt-auth/: Cargo.toml  README.md
chapter-07-jwt-auth/src/: main.rs
chapter-08-redis-background/: Cargo.toml  README.md  docker-compose.yml
chapter-08-redis-background/src/: main.rs
chapter-09-realtime/: Cargo.toml  README.md
chapter-09-realtime/src/: main.rs
chapter-10-frontend-integration/: Cargo.toml  README.md
chapter-10-frontend-integration/frontend/: api-client.ts  vite.config.ts
chapter-10-frontend-integration/public/: index.html
chapter-10-frontend-integration/public/assets/: app.js  styles.css
chapter-10-frontend-integration/src/: main.rs
chapter-11-testing-quality/: Cargo.toml  README.md
chapter-11-testing-quality/.github/workflows/: ci.yml
chapter-11-testing-quality/src/: lib.rs  main.rs
chapter-11-testing-quality/tests/: http_tests.rs
chapter-12-production-deployment/: Cargo.toml  Dockerfile  README.md  RUNBOOK.md
chapter-12-production-deployment/.github/workflows/: ci.yml
chapter-12-production-deployment/k8s/: deployment.yaml
chapter-12-production-deployment/src/: main.rs
scripts/: check-all.sh  run-postgres.sh  run-redis.sh
