[package]
name = "chapter-12-production-deployment"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }

#serde = { workspace = true }
#serde_json = { workspace = true }
#tokio = { workspace = true }
#tower = { version = "0.5", features = ["util", "timeout"] }
#tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

axum = "0.8"
tokio = { version = "1", features = ["full"] }

tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
